force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/RTL_Campaign_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Campaign Assignment Rule</label>
    <nameField>
        <displayFormat>CAS-{0000}</displayFormat>
        <label>Campaign Assignment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>