force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/Is_Valid_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Campaign__c</fullName>
    <formula>NOT(OR(ISPICKVAL(RTL_Campaign__r.Status, &apos;Cancelled&apos;),ISPICKVAL(RTL_Campaign__r.Status, &apos;Expired&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid Campaign</label>
    <type>Checkbox</type>
</CustomField>