force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>Check with field LeadSource in Lead&apos;s data.</description>
    <inlineHelpText>การ Set Default Campaign Rule ค่า Lead Source จะเท่ากับ Default และค่าของฟิลด์ Campaign Lead Source, Campaign Lead Reference และ Lead Group จะต้องเป็นค่าว่างเท่านั้น!</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk-in customer</fullName>
            </value>
            <value>
                <fullName>Others Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>CM Referral</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>