force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/RTL_Active__c.field-meta.xml
<CustomField>
    <fullName>RTL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>