force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Campaign.Status</field>
            <operation>notEqual</operation>
            <value>Cancelled, Expired</value>
        </filterItems>
        <filterItems>
            <field>$Source.RTL_End_Date__c</field>
            <operation>lessOrEqual</operation>
            <valueField>Campaign.EndDate</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Assignment Rules</relationshipLabel>
    <relationshipName>Campaign_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>