force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/RTL_Campaign_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Lead_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>