force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/RTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Segment__c</fullName>
    <description>Check with field RTL_Customer_Segment__c in Lead&apos;s data.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Check with field RTL_Customer_Segment__c in Lead&apos;s data.</inlineHelpText>
    <label>Lead Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>