force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/fields/RTL_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>