force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/validationRules/Validate_Lead_Source_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Lead_Source_Default</fullName>
    <active>true</active>
    <description>For Validate Lead Source is default and others fields is not null.</description>
    <errorConditionFormula>AND(ISPICKVAL(LeadSource__c, &apos;Default&apos;), OR(NOT(ISBLANK(RTL_Customer_Segment__c)), NOT(ISBLANK(RTL_TMB_Campaign_Reference__c)), NOT(ISBLANK(RTL_Campaign_Lead_Source__c))))</errorConditionFormula>
    <errorMessage>การ Set Default Campaign Rule ค่า Lead Source จะเท่ากับ Default และค่าของฟิลด์ Campaign Lead Source, Campaign Lead Reference และ Lead Group จะต้องเป็นค่าว่างเท่านั้น!</errorMessage>
</ValidationRule>