force-app/main/default/objects/RTL_Campaign_Assignment_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTL_Active__c</columns>
    <columns>RTL_Campaign_Lead_Source__c</columns>
    <columns>RTL_TMB_Campaign_Reference__c</columns>
    <columns>LeadSource__c</columns>
    <columns>RTL_Customer_Segment__c</columns>
    <columns>RTL_Campaign__c</columns>
    <columns>RTL_Start_Date__c</columns>
    <columns>RTL_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RTL_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>